# supabase-micro

./: .env.example  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: auth.rs  client.rs  error.rs  lib.rs  postgrest.rs  query.rs  response.rs
src/transport/: mod.rs  request.rs  reqwless_transport.rs
tests/: host_reqwest.rs
