[package]
name = "supabase-micro"
version = "0.1.0"
edition = "2021"
description = "no_std Supabase client for embedded devices"
license = "MIT OR Apache-2.0"

[dependencies]
heapless = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.6"
embedded-io-async = "0.6"
embedded-nal-async = "0.8"
reqwless = { version = "0.14", default-features = false }

[dev-dependencies]
serde_json = "1"

[features]
default = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
